使用 Colaboratory 建立

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJC5vndLAXaCRUarMOheZl",
+      "authorship_tag": "ABX9TyP5miGa9+8hihqPim3CYrKl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,12 +65,114 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = {1:'123', '2': 345 }"
+      ],
       "metadata": {
         "id": "k5beNRR48_dL"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bDyTngp0A1gy",
+        "outputId": "362357bf-b7bd-4443-d8e2-6c04879ab522"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "student = {1, 2, 2, 3}"
+      ],
+      "metadata": {
+        "id": "TN8iJCYlBbBE"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(student)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8JX2j2i5Bc6l",
+        "outputId": "268a89a7-5f75-4662-e97a-deb848833f98"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "set"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "student_id = (0,1,2)"
+      ],
+      "metadata": {
+        "id": "_a5BpnBoEf6N"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(student_id)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VYS9OIEoEoG1",
+        "outputId": "a3c688dd-bc1b-4395-b229-cd4f4319d138"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     }
   ]
 }
